// 

syntax = "proto2";
package pz;

message Bundle {
  repeated Type types = 1;
  repeated string packages = 2;

  message ForeignType {
    optional string name = 1;
    optional uint32 package = 2;
  }
  repeated ForeignType foreign_types = 3;
}

message Type {
  enum Kind {
    MESSAGE = 0;
    STRUCT = 1;
    CHOICE = 2;
    ENUM = 3;
  }

  message Attrs {
    optional string deprecated = 1;

    repeated string docs = 100;
  }

  optional string name = 1;
  optional uint32 package = 2;
  optional Kind kind = 3;
  optional uint32 declared_in = 4;

  repeated Field fields = 10;
  repeated uint32 nesteds = 11;
  optional Attrs attrs = 12;

  optional uint32 span = 20;
}

message Field {
  enum Type {
    NONE = 0;

    I32 = 1;
    U32 = 2;
    F32 = 3;
    I64 = 4;
    U64 = 5;
    F64 = 6;

    BOOL = 7;
    STRING = 8;

    TYPE = 9;
    FOREIGN = 10;
  }

  message Attrs {
    optional string deprecated = 1;

    repeated string docs = 100;
  }

  optional string name = 1;
  optional int32 number = 2;
  optional bool is_repeated = 3;
  optional Type type = 4;
  optional uint32 type_index = 5;

  optional Attrs attrs = 10;

  optional uint32 span = 20;
}