//

syntax = "proto2";
package pz.plugin;

import "pz.proto";

message NegotiationRequest {}

message NegotiationResponse {
  message Option {
    optional string name = 1;
    optional string help = 2;
  }

  optional string name = 1;
  optional string version = 2;
  repeated Option options = 10;
}

message CodegenRequest {
  optional pz.Bundle bundle = 1;
  repeated uint32 requested_indices = 2;

  map<string, string> options = 3;
  optional bool debug = 4;
}

message CodegenResponse {
  message File {
    optional string path = 1;
    optional bytes content = 2;
  }

  repeated File files = 1;
  repeated Diagnostic report = 2;
}

message Diagnostic {
  enum Kind {
    ERROR = 0;
    WARNING = 1;
  }

  message Snippet {
    optional uint32 span = 1;
    optional string message = 2;
    optional bool is_remark = 3;
  }

  optional Kind kind = 1;
  optional string message = 2;
  repeated Snippet snippets = 3;
  repeated string notes = 4;
}